Credit section overlapping issue solved

--- a/assets/css/frontend.css
+++ b/assets/css/frontend.css
@@ -1715,7 +1715,7 @@ body:not(.onepage-doc) .sticky_menu .doc_documentation_area.body_fixed .doc_righ
   margin: 0 5px;
 }
 
-.doc_left_sidebarlist::after {
+.credit-text-container::after {
   display: block;
   clear: both;
   content: "";
