--- a/assets/scss/frontend/_doclist.scss
+++ b/assets/scss/frontend/_doclist.scss
@@ -1379,7 +1379,7 @@ body:not(.onepage-doc) .sticky_menu {
   margin: 0 5px;
 }
 
-.doc_left_sidebarlist::after {
+.credit-text-container::after {
   display: block;
   clear: both;
   content: "";
